fixed light's and cube's position size on mobile

--- a/src/pages/trading-bots/styles.module.css
+++ b/src/pages/trading-bots/styles.module.css
@@ -118,6 +118,15 @@
     width: 18%;
   }
 
+  .light-cube-two {
+    width: 35%;
+  }
+
+  .cube-two {
+    width: 8.5%;
+    top: 66.9%;
+  }
+
   .light-column {
     top: 46%;
     right: -4%;
